# cryptoB

./: .replit  main.py  pyproject.toml  requirements.txt
bot/: analysis.py  database.py  exchange_handler.py  models.py  news_analyzer.py  signal_generator.py  signal_monitor.py  telegram_notifier.py
utils/: config.py  logger.py
