[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.57",
    "pandas-ta>=0.3.14b0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-telegram-bot>=21.10",
    "streamlit>=1.42.0",
    "textblob>=0.19.0",
]
